fine tune - Increased the vertical margin of code blocks on small screens to prevent them from exceeding the vertical line area and reduced the horizontal padding of code blocks. - Removed the feature of using location.hash to record systemMessage, fixing the bug of systemMessage being lost after refreshing.

--- a/src/message.css
+++ b/src/message.css
@@ -1,7 +1,7 @@
 .message pre {
   background-color: #24242d;
   font-size: 0.8rem;
-  padding: 0.4rem 1rem;
+  padding: 0.4rem 0.6rem;
 }
 
 .dark .message pre {
